--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/A-egis/vue-wheels/issues"
   },
-  "homepage": "https://github.com/A-egis/vue-wheels#readme"
+  "homepage": "https://github.com/A-egis/vue-wheels#readme",
+  "dependencies": {
+    "vue": "^2.6.11"
+  }
 }
